<resources>
    <string name="app_name">MobileAppLabWork2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Галерея</string>
    <string name="menu_slideshow">Заглушка1</string>
    <string name="menu_slideshow_1">Заглушка2</string>

    <string name="menu_10">Журнал</string>
    <string name="menu_11">Создать журнал</string>
    <string name="menu_12">Открыть журнал</string>
    <string name="menu_13">Удалить страницу/журнал</string>
    <string name="menu_14">Сохранить в файл</string>
    <string name="menu_15">Загрузить журнал из файла</string>
    <string name="menu_20">Редактирование</string>
    <string name="menu_21">Создать страницу</string>
    <string name="menu_22">Создать расписание</string>
    <string name="menu_23">Редактировать расписание</string>
    <string name="menu_24">Редактировать файл данных</string>
    <string name="menu_25">Добавить страницу из файла</string>
    <string name="menu_30">Настройка</string>
    <string name="menu_31">Настройка страницы/журнала</string>
    <string name="menu_32">Загрузить список студентов</string>
    <string name="menu_33">Переслать файл на Email</string>
    <string name="menu_34">Поиск</string>
    <string name="menu_35">О программе/Инструкция</string>
    <string name="wednesday">Wednesday</string>
    <string name="tuesday">Tuesday</string>
    <string name="monday">Monday</string>
    <string name="menu_journal">Журнал</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="permission_granted">Разрешение получено</string>
    <string name="permission_request">Запрос разрешения на доступ к карте памяти</string>
    <string name="permission_not_granted">Разрешения на доступ к карте памяти не получены</string>
    <string name="storage_not_available">Или карта памяти отсутствует</string>
    <string name="try_all_files_access">Попытка получить доступ ко всем файлам на внешнем носителе</string>
    <string name="exception_occurred">Exception %s</string>
    <string name="menu_new">Новый файл</string>
    <string name="menu_open">Открыть</string>
    <string name="menu_save">Сохранить</string>
    <string name="menu_save_as">Сохранить как...</string>
    <string name="NullPointerEx">Перестроение списка файлов невозможно</string>
    <string name="but_ok">OK</string>
    <string name="but_cancel">Выход</string>
    <string name="but_dir">Вернуться к выбору каталога</string>
    <string name="ed_dir">Каталог</string>
    <string name="ed_create">Создать каталог</string>
    <string name="ed_file">Имя файла</string>
    <string name="atten">Внимание! Предупреждение!</string>
    <string name="directory">Каталог</string>
    <string name="createdir">Создать каталог</string>
    <string name="backtodir">Имя файла</string>
    <string name="buttonOK">Да</string>
    <string name="buttcanc">Выход</string>
    <string name="buttback">Вернуться к выбору каталога</string>
</resources>